fix: don't break counters behind moderation queue and cites

--- a/assets/css/header/page-header.scss
+++ b/assets/css/header/page-header.scss
@@ -67,6 +67,11 @@
         display: none;
       }
     }
+
+    li.moderation-queue a,
+    li.cites a {
+      display: inline;
+    }
   }
 
   .search {
